--- a/index4.html
+++ b/index4.html
@@ -14,36 +14,50 @@
             <h1>COVID-19 Quiz</h1>
             <h2>How well do you know COVID-19?</h2>
         </div>
-        <form id=form1 action="">
+        <div id=form1 action="">
             <p>COVID-19 is caused by what organism?</p>
             <input type="radio" name="first" value="0" /> a) Bacteria <br />
             <input type="radio" name="first" value="20" /> b) Viruses <br />
             <input type="radio" name="first" value="0" /> c) Animals <br />
-            <input type="radio" name="first" value="0" /> d) chineese <br />
+            <input type="radio" name="first" value="0" /> d) Chineese <br />
+            <button type="submit" value="next" />Next <br/>
+        </div>
+        <div id=form2 action="">
             <p>What state in china was the first case of Covid-19 discovered in?</p>
-            <input type="radio" name="second" value="0" /> Honk-kong <br />
-            <input type="radio" name="second" value="0" /> Shanghai<br />
-            <input type="radio" name="second" value="20" /> Wuhan<br />
-            <input type="radio" name="second" value="0" /> Beijing <br />
+            <input type="radio" name="second" value="0" /> a) Hong-kong <br />
+            <input type="radio" name="second" value="0" /> b) Shanghai<br />
+            <input type="radio" name="second" value="20" /> c) Wuhan<br />
+            <input type="radio" name="second" value="0" /> d) Beijing <br />
+            <button type="submit" value="next" />Next <br/>
+        </div>
+        <div id=form3 action="">
             <p>Which is not a known symptom of covid-19?</p>
-            <input type="radio" name="third" value="0" /> Fever <br />
-            <input type="radio" name="third" value="0" /> Running nose <br />
-            <input type="radio" name="third" value="0" /> Difficulty in breathing <br />
-            <input type="radio" name="third" value="20" /> Broken bones <br />
+            <input type="radio" name="third" value="0" /> a) Fever <br />
+            <input type="radio" name="third" value="0" /> b) Running nose <br />
+            <input type="radio" name="third" value="0" /> c) Difficulty in breathing <br />
+            <input type="radio" name="third" value="20" /> d) Broken bones <br />
+            <button type="submit" value="next" />Next <br/>
+        </div>
+        <div id=form4 action="">
             <p>What does the 19 in covid-19 stand for?</p>
-            <input type="radio" name="fourth" value="0" /> It consists of 19 types of viruses <br/>
-            <input type="radio" name="fourth" value="0" /> It kills in 19 days <br/>
-            <input type="radio" name="fourth" value="20" /> It was discovered in the year 2019 <br/>
-            <input type="radio" name="fourth" value="0" /> It consists of 19 sequences <br/>
+            <input type="radio" name="fourth" value="0" /> a) It consists of 19 types of viruses <br/>
+            <input type="radio" name="fourth" value="0" /> b) It kills in 19 days <br/>
+            <input type="radio" name="fourth" value="20" /> c) It was discovered in the year 2019 <br/>
+            <input type="radio" name="fourth" value="0" /> d) It consists of 19 sequences <br/>
+            <button type="submit" value="next" />Next <br/>
+        </div>
+        <div id=form5 action="">
             <p>Which of these ways can covid-19 not be transmitted?</p>
-            <input type="radio" name="fifth" value="20" /> Through mosquito bites<br/>
-            <input type="radio" name="fifth" value="0" /> Through coughing and sneezing<br/>
-            <input type="radio" name="fifth" value="0" /> Through handshakes<br/>
-            <input type="radio" name="fifth" value="0" /> Through kissing<br/>
-            <button type="submit" value="submit" />submit/>
-
-        </form>
+            <input type="radio" name="fifth" value="20" /> a) Through mosquito bites<br/>
+            <input type="radio" name="fifth" value="0" /> b) Through coughing and sneezing<br/>
+            <input type="radio" name="fifth" value="0" /> c) Through handshakes<br/>
+            <input type="radio" name="fifth" value="0" /> d) Through kissing<br/>
+            <button type="submit" value="submit" />submit <br/>
+        </div>
     </div>
+    <script>
+        document.getElementByID
+    </script>
 </body>
 
 </html>
