--- a/index4.html
+++ b/index4.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel=stylesheet href=style4.css>
+
     <title>JavaScript quizz app</title>
 </head>
 
@@ -14,7 +15,37 @@
             <h1>COVID-19 Quiz</h1>
             <h2>How well do you know COVID-19?</h2>
         </div>
-        <div id=form1 action="">
+        <div id="form1" action="">
+            <p style="font-size: 12px;">score:
+                <div class="score"></div>
+            </p>
+            <p class="question"></p>
+            <div class="options">
+                <input type="radio" name="first" />
+                <span></span>
+            </div>
+            <div class="options">
+                <input type="radio" name="first" />
+                <span></span>
+            </div>
+            <div class="options">
+                <input type="radio" name="first" />
+                <span></span>
+            </div>
+            <div class="options">
+                <input type="radio" name="first" />
+                <span></span>
+            </div>
+
+
+            <button id="enter" type="return">Enter</button>
+
+
+            <button id="next" type="submit" style="float: right; margin-right: 40px;">next </button>
+            <div id="demo"></div>
+        </div>
+
+        <!-- <div id=form1 action="">
             <p>COVID-19 is caused by what organism?</p>
             <input type="radio" name="first" value="0" /> a) Bacteria <br />
             <input type="radio" name="first" value="20" /> b) Viruses <br />
@@ -34,7 +65,7 @@
             <p>Which is not a known symptom of covid-19?</p>
             <input type="radio" name="third" value="0" /> a) Fever <br />
             <input type="radio" name="third" value="0" /> b) Running nose <br />
-            <input type="radio" name="third" value="0" /> c) Difficulty in breathing <br />
+            <input tygb     pe="radio" name="third" value="0" /> c) Difficulty in breathing <br />
             <input type="radio" name="third" value="20" /> d) Broken bones <br />
             <button type="submit" value="next" />Next <br/>
         </div>
@@ -57,7 +88,8 @@
     </div>
     <script>
         document.getElementByID
-    </script>
+    </script> -->
+        <script src="javascript41.js"></script>
 </body>
-
-</html>
+<script>
+</script>
