--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <script>
         document.getElementByID
     </script> -->
-        <script src="javascript41.js"></script>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 <script>
 </script>
