--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <h2>How well do you know COVID-19?</h2>
         </div>
         <div id="form1" action="">
+             <p style="font-size: 12px;">score: <span class="score">0</span>/5
+            </p>
             <p style="font-size: 12px;">score:
                 <div class="score"></div>
             </p>
