--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <button id="enter" type="return">Enter</button>
 
 
-            <button id="next" type="submit" style="float: right; margin-right: 40px;">next </button>
+            <button id="next" type="submit" style="float: right; margin-right: 40px;">skip</button>
             <div id="demo"></div>
         </div>
 
